[gd_scene load_steps=12 format=3 uid="uid://cy4xpec2fr2hp"]

[ext_resource type="Script" uid="uid://bt0caxxckkird" path="res://Scenes/main.gd" id="1_r150o"]
[ext_resource type="Resource" uid="uid://b0kbqb48haqnw" path="res://Data/Lists/1.tres" id="2_idj7w"]
[ext_resource type="Script" uid="uid://db8b0fsyh6rxo" path="res://Scenes/ending_screen.gd" id="3_kln2b"]
[ext_resource type="AudioStream" uid="uid://ctcsdstfescu7" path="res://sfx/correct.wav" id="4_rgh2o"]
[ext_resource type="AudioStream" uid="uid://5oyh5vd7xxnj" path="res://sfx/wrong.wav" id="5_pbw6q"]
[ext_resource type="AudioStream" uid="uid://1nr6rpyp100w" path="res://sfx/Victory.mp3" id="5_v1gob"]
[ext_resource type="AudioStream" uid="uid://d04k70m2ha833" path="res://sfx/Defeat.mp3" id="7_jw32o"]

[sub_resource type="Animation" id="Animation_idj7w"]
resource_name = "Correct"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.766667, 1.3),
"transitions": PackedFloat32Array(0.0441942, 0.0441942, 0.241484, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(0, 1, 0.0392157, 0.32549), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_to_next"
}]
}

[sub_resource type="Animation" id="Animation_kln2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0.0392157, 0)]
}

[sub_resource type="Animation" id="Animation_rgh2o"]
resource_name = "Wrong"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.766667, 1.3),
"transitions": PackedFloat32Array(0.0441942, 0.0441942, 0.241484, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 0, 0.0219488, 0.32549), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_to_next"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbw6q"]
_data = {
&"Correct": SubResource("Animation_idj7w"),
&"RESET": SubResource("Animation_kln2b"),
&"Wrong": SubResource("Animation_rgh2o")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r150o")
my_questions = ExtResource("2_idj7w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.877434, 0.744088, 1)

[node name="EndingScreen" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 221.0
offset_right = -43.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_kln2b")

[node name="ScoreLabel" type="Label" parent="EndingScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "your final score is = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="EndingScreen"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Return"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NumLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Question 2/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "score = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/text_highlight_h_padding = 50
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 32
text = "What is t"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="1" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Hello"

[node name="2" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Hello"

[node name="3" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Hello"

[node name="4" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Hello"

[node name="AnimationRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0.0392157, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationRect"]
libraries = {
&"": SubResource("AnimationLibrary_pbw6q")
}

[node name="Correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rgh2o")

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v1gob")

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pbw6q")

[node name="Defeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jw32o")

[connection signal="pressed" from="EndingScreen/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/1" to="." method="option_clicked" binds= [0]]
[connection signal="pressed" from="VBoxContainer/GridContainer/2" to="." method="option_clicked" binds= [1]]
[connection signal="pressed" from="VBoxContainer/GridContainer/3" to="." method="option_clicked" binds= [2]]
[connection signal="pressed" from="VBoxContainer/GridContainer/4" to="." method="option_clicked" binds= [3]]
